--- a/src/app/components/registra-producto/registra-producto.component.html
+++ b/src/app/components/registra-producto/registra-producto.component.html
@@ -1,1 +1,81 @@
-<p>registra-producto works!</p>
+<div>
+    <form class="content" (ngSubmit)="insertaProducto()" >
+    <div class="submit-form" >  
+  
+         <div class="row">
+            <div class="col-lg-12">
+                <h4>Registro de Producto </h4>
+            </div>
+        </div>
+  
+        <div class="row" style="margin-top: 3%">
+                <div class="col-lg-3">
+                    <label for="nombre">Nombre</label>
+                    <input type="text" class="form-control" name="nombre" id="nombre" [(ngModel)] ="producto.nombre"   />
+                </div>
+            
+                <div class="col-lg-3">
+                    <label for="numHombres">serie</label>
+                    <input type="text" class="form-control" name="numHombres" id="numHombres"  [(ngModel)] = "producto.serie" />
+                </div>
+
+                <div class="col-lg-3">
+                    <label for="numMujeres">Durabilidad</label>
+                    <input type="text" class="form-control" name="numMujeres" id="numMujeres"  [(ngModel)] = "producto.durabilidad"  />
+                </div>
+         </div>
+  
+        <div class="row" style="margin-top: 3%">
+        <div class="col-lg-3">
+            <label for="edadMinima">fecha vigencia</label>
+            <input type="date"  class="form-control" id="fechaVigencia"  name="fechaVigencia" 
+            [(ngModel)]= "producto.fechaVigencia" />
+        </div>
+    
+        <div class="col-lg-2">
+                <label for="edadMaxima">Precio</label>
+                <input type="text"  class="form-control" id="precio"  name="precio" maxlength="3"   [(ngModel)]= "producto.precio"/>
+            </div>
+
+            <div class="col-lg-2">
+                <label for="sede">Stock</label>
+                <input type="number"  class="form-control" id="stock"  name="stock" maxlength="2"  [(ngModel)]= "producto.stock" />
+            </div>
+ 
+            
+            <div class="col-lg-3">
+                <label for="deporte">Marca</label>
+            <select  id="deporte" name="estado" class="form-control"   [(ngModel)] = "producto.marca" >
+               
+                    <option value="-1"> [Seleccione] </option>  
+                     <option *ngFor="let aux of marca " value="{{aux.idMarca}}">
+                        {{aux.nombre}}
+                    </option>   
+                </select> 
+            </div>
+     
+    <div class="col-lg-3">
+                <label for="pais">Pais</label>
+                <select  name="pais" class="form-control"  [(ngModel)] ="producto.pais" >  
+                    <option value="-1"> [Seleccione] </option>   
+                    <option *ngFor="let aux of pais" value= "{{aux.idPais}}" >
+                        {{aux.nombre}}
+                    </option>       
+                </select>
+            </div>
+
+        </div>
+  
+        <div class="row" style="margin-top: 3%"> 
+                <div class="col-lg-12">
+                    <button class="btn btn-primary"  >Enviar</button>
+                </div>
+        </div>
+  
+    
+      </div>
+  
+     </form>
+  
+  
+    </div>
