--- a/src/app/components/consulta-producto/consulta-producto.component.html
+++ b/src/app/components/consulta-producto/consulta-producto.component.html
@@ -1,1 +1,83 @@
-<p>consulta-producto works!</p>
+<div>
+    <form class="content"  (submit) = "consultaProducto()">
+    <div class="submit-form" >
+
+         <div class="row">
+            <div class="col-lg-12">
+                <h3>Consulta de producto</h3>
+            </div>
+        </div>
+  
+        <div class="row" style="margin-top: 2%">
+                <label for="dni" class="col-lg-0">Nombre</label>
+                <div class="col-lg-2">
+                    <input type="text" class="form-control" name="nombre" id="nombre" [(ngModel)]= "nombre"  />
+                </div>
+                
+                <label for="dni" class="col-lg-0">serie</label>
+                <div class="col-lg-2">
+                    <input type="text" class="form-control" name="serie" id="serie" [(ngModel)]= "serie"  />
+                </div>
+                                   
+                <label for="dni" class="col-lg-0">durabilidad</label>
+                <div class="col-lg-2">
+                    <input type="text" class="form-control" name="durabilidad" id="durabilidad" [(ngModel)]= "durabilidad"  />
+                </div>
+                <div class="col-lg-2">
+                        <div class="custom-control custom-switch">
+                            <input type="checkbox" class="custom-control-input" id="estado" [(ngModel)]= "estado" checked  name="estado"/>
+                            <label class="custom-control-label" for="estado">Estado</label>
+                        </div>
+                    </div>
+                
+                <div class="col-lg-2">
+                    <button class="btn btn-success">Filtrar</button>
+                </div>
+         </div>
+         
+
+
+         <div class="row" style="margin-top: 3%">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nombre</th>
+                            <th>serie</th>
+                            <th>durabilidad</th>
+                            <th>fechaVigencia</th>
+                            <th>precio</th>
+                            <th>stock</th>
+                            <th>estado</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                            <tr *ngFor ="let aux of productos" >
+                                <td>{{ aux.idProducto }}</td>
+                                <td>{{ aux.nombre }}</td>
+                                <td>{{ aux.serie }}</td>
+                                <td>{{ aux.durabilidad }}</td>
+                                <td>{{ aux.fechaVigencia }}</td>
+                                <td>{{ aux.precio }}</td>
+                                <td>{{ aux.stock }}</td>
+                                <td>{{ aux.estado==1?'Activo':'Inactivo' }}</td>
+                                <td> </td>
+                                
+                            </tr>
+
+                    </tbody>
+                       
+
+                </table>
+
+
+         </div>
+        
+
+        </div>
+
+  
+     </form>
+  
+  
+    </div>
