--- a/src/app/components/registra-proveedor/registra-proveedor.component.html
+++ b/src/app/components/registra-proveedor/registra-proveedor.component.html
@@ -1,1 +1,94 @@
-<p>registra-proveedor works!</p>
+<div>
+    <form class="content" (ngSubmit)="insertado()">
+    <div class="submit-form" >
+  
+         <div class="row">
+            <div class="col-lg-12">
+                <h6>Registro de Proveedor</h6>
+            </div>
+        </div>
+  
+        <div class="row" style="margin-top: 3%">
+                <div class="col-lg-9">
+                    <label for="razonsocial">RazonSocial</label>
+                    <input type="text" class="form-control" name="razonsocial" id="razonsocial" [(ngModel)] = "proveedor.razonsocial" />
+                </div>
+            
+                <div class="col-lg-5">
+                    <label for="ruc">RUC</label>
+                    <input type="text" class="form-control" name="ruc" id="ruc" maxlength="8" [(ngModel)] = "proveedor.ruc"   />
+                </div>
+         </div>
+  
+         <div class="col-lg-5">
+            <label for="direccion">Direccion</label>
+            <input type="text" class="form-control" name="direccion" id="direccion" maxlength="8"  [(ngModel)] = "proveedor.direccion"   />  
+        </div>
+ </div>
+
+ <div class="col-lg-5">
+    <label for="telefono">Telefono</label>
+    <input type="text" class="form-control" name="telefono" id="telefono" maxlength="8" [(ngModel)] = "proveedor.telefono"   />   
+</div>
+
+<div class="col-lg-5">
+    <label for="celular">Celular</label>
+    <input type="text" class="form-control" name="celular" id="celular" maxlength="8"  [(ngModel)] = "proveedor.celular"   />  
+</div>
+        <div class="row" style="margin-top: 3%">
+
+            <div class="col-lg-4">
+                <label for="contacto">Contacto</label>
+                <input type="text" class="form-control" name="contacto" id="contacto" maxlength="8"  [(ngModel)] = "proveedor.contacto"   />  
+            </div>
+
+
+            <div class="row" style="margin-top: 3%">
+
+                <div class="col-lg-4">
+                    <label for="departamento">Departamento</label>
+                    <select  id="departamento" name="departamento" class="form-control" (change)="cargaProvincia()" [(ngModel)] ="proveedor.ubigeo!.departamento"  > 
+                        <option value="-1"> [Seleccione] </option>   
+                       <option *ngFor="let aux of departamentos" value="{{aux}}"  >
+                           {{aux}}
+                       </option>
+                    </select>
+                </div>
+    
+                <div class="col-lg-4">
+                    <label for="provincia">Provincia</label>
+                    <select  id="provincia" name="provincia" class="form-control" (change)="cargaDistrito()" [(ngModel)] ="proveedor.ubigeo!.provincia"  >
+                        <option value="-1"> [Seleccione] </option>   
+                        <option *ngFor="let aux of provincias" value="{{aux}}"  >
+                            {{aux}}
+                        </option>
+                    </select>
+                </div>
+    
+                <div class="col-lg-4">
+                    <label for="distrito">Distrito</label>
+                    <select  id="distrito" name="distrito" class="form-control" [(ngModel)] ="proveedor.ubigeo!.idUbigeo" > 
+                        <option value="-1"> [Seleccione] </option>   
+                        <option *ngFor="let aux of distritos" value="{{aux.idUbigeo}}"  >
+                            {{aux.distrito}}
+                        </option>
+                    </select>
+                </div>
+
+            </div>
+
+        </div>
+  
+        <div class="row" style="margin-top: 3%"> 
+                <div class="col-lg-12">
+                    <button class="btn btn-success"  >Enviar</button>
+                </div>
+        </div>
+  
+    
+    
+  
+     </form>
+  
+  
+    </div>
