--- a/src/app/components/consulta-proveedor/consulta-proveedor.component.html
+++ b/src/app/components/consulta-proveedor/consulta-proveedor.component.html
@@ -1,1 +1,105 @@
-<p>consulta-proveedor works!</p>
+<div>
+    <form class="content"  (submit) = "consultaProveedor()">
+    <div class="submit-form" >
+
+         <div class="row">
+            <div class="col-lg-12">
+                <h3>Consulta de proveedor</h3>
+            </div>
+        </div>
+  
+        <div class="row" style="margin-top: 2%">
+                <label for="dni" class="col-lg-0">RazonSocial</label>
+                <div class="col-lg-2">
+                    <input type="text" class="form-control" name="razonsocial" id="razonsocial" [(ngModel)]= "razonsocial"  />
+                </div>
+                <label for="dni" class="col-lg-0">ruc</label>
+                <div class="col-lg-2">
+                    <input type="text" class="form-control" name="ruc" id="ruc" [(ngModel)]= "ruc"  />
+                </div>  
+                <div class="col-lg-2">
+                    <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="estado"  [(ngModel)]= "estado"  checked name="estado"/>
+                        <label class="custom-control-label" for="estado">Estado</label>
+                    </div>
+           
+                </div>
+
+                
+                <div class="col-lg-2">
+                    <button class="btn btn-success"  >Filtrar</button>
+                </div>
+         </div>
+
+         <div class="row" style="margin-top: 2%">
+                <div class="col-lg-4">
+                    <label for="departamento">Departamento</label>
+                    <select  id="departamento"  name="departamento" class="form-control" 
+                        (change)= "cargaProvincia()" [(ngModel)]="selDepartamento"  >    
+                        <option value="-1">[Seleccione]</option>
+                        <option *ngFor="let aux of departamentos"    value="{{ aux }}">
+                                  {{ aux }}
+                        </option>    
+                    </select>
+                </div>
+    
+                <div class="col-lg-4">
+                    <label for="provincia">Provincia</label>
+                    <select  id="provincia"  name="provincia"  class="form-control"   
+                         (change)= "cargaDistrito()" [(ngModel)]="selProvincia"    >
+                        <option value="-1">[Seleccione]</option>
+                        <option *ngFor="let aux of provincias"    value="{{ aux }}">
+                            {{ aux }}
+                        </option>    
+       
+                    </select>
+                </div>
+    
+                <div class="col-lg-4">
+                    <label for="distrito">Distrito</label>
+                    <select  id="distrito"   name="distrito"   class="form-control" [(ngModel)]="selDistrito" >
+                        <option value="-1">[Seleccione]</option>
+                        <option *ngFor="let aux of distritos"    value="{{ aux.idUbigeo }}">
+                            {{ aux.distrito }}
+                        </option> 
+                    </select>
+                </div>
+         </div>
+
+         <div class="row" style="margin-top: 3%">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Razonsocial</th>
+                            <th>Ruc</th>
+                            <th>Ubigeo</th>
+                            <th>Estado</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                            <tr *ngFor = "let aux of proveedor" >
+                                 <td>{{ aux.idProveedor }}</td>   
+                                 <td>{{ aux.razonsocial }}</td>   
+                                 <td>{{ aux.ruc }}</td>   
+                                 <td>{{ aux.ubigeo!.departamento }} - {{ aux.ubigeo!.provincia }} - {{ aux.ubigeo!.distrito }} </td>   
+                                 <td>{{ aux.estado==1?'Activo':'Inactivo' }}</td>
+                            </tr>
+
+                    </tbody>
+                       
+
+                </table>
+
+
+         </div>
+        
+
+        </div>
+
+  
+     </form>
+  
+  
+   
+</div>
