--- a/src/app/components/consulta-sede/consulta-sede.component.html
+++ b/src/app/components/consulta-sede/consulta-sede.component.html
@@ -1,1 +1,97 @@
-<p>consulta-sede works!</p>
+<div>
+
+    <form class="content"  (submit) = "consultaSede()">
+
+
+    <div class="submit-form" >
+  
+    <div class="submit-form" >
+         <div class="row">
+            <div class="col-lg-12">
+                <h6>Consulta de Sede</h6>
+            </div>
+        </div>
+  
+        <div class="row" style="margin-top: 2%">
+                <label for="nombre" class="col-lg-1">Nombre</label>
+                <div class="col-lg-2">
+                    <input type="text" class="form-control" name="nombre" id="nombre"  [(ngModel)]= "nombre" />
+                </div>
+                <label for="direccion" class="col-lg-1">Direccion</label>
+                <div class="col-lg-2">
+                    <input type="text" class="form-control" name="direccion" id="direccion"  [(ngModel)]= "direccion" />
+                </div>
+                <div class="col-lg-2">
+                    <div class="custom-control custom-switch">
+                        <input type="checkbox" class="custom-control-input" id="estado" [(ngModel)]= "estado" checked  name="estado"/>
+                        <label class="custom-control-label" for="estado">Estado</label>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <button class="btn btn-success"  >Filtrar</button>
+                </div>
+
+        </div>
+            <div class="col-lg-4">
+                <label for="pais">Pais</label>
+                <select  id="pais"   name="pais"   class="form-control" [(ngModel)]="selPais" >
+                    <option value="-1">[Seleccione]</option>
+                    <option *ngFor="let aux of pais"    value="{{ aux.idPais }}">
+                         {{ aux.idPais }}
+                    </option> 
+                </select>
+            </div>
+
+         </div>
+
+         <!-- <div class="row" style="margin-top: 2%">    
+                <div class="col-lg-4">
+                    <label for="pais">Pais</label>
+                    <select  id="pais"   name="pais"   class="form-control" [(ngModel)]="selPais">
+                        <option value="-1">[Seleccione]</option>
+                        <option *ngFor="let aux of pais"    value="{{ aux.idPais }}">
+                            {{ aux.idPais}}
+                        </option> 
+                    </select>
+                </div>
+         </div> -->
+
+
+         <div class="row" style="margin-top: 3%">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nombre</th>
+                            <th>Direccion</th>
+                            <th>Pais</th>
+                            <th>Estado</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                            <tr *ngFor = "let aux of sede" >
+
+                                 <td>{{ aux.idSede}}</td>   
+                                 <td>{{ aux.idSede }}</td>   
+                                 <td>{{ aux.nombre }}</td>   
+                                 <td>{{ aux.direccion }}</td>   
+                                 <td>{{ aux.pais?.idPais }}</td>   
+                                 <td>{{ aux.estado==1?'Activo':'Inactivo' }}</td>
+                            </tr>
+
+                    </tbody>
+                       
+
+                </table>
+
+
+         </div>
+        
+
+        </div>
+
+  
+    </form>
+
+     
+</div>
