--- a/src/app/components/crud-sede/crud-sede.component.html
+++ b/src/app/components/crud-sede/crud-sede.component.html
@@ -1,1 +1,218 @@
-<p>crud-sede works!</p>
+<div class="container" >
+    <h5>Crud de Sede</h5>
+
+    <div class="col-md-23" style="margin-top: 3%">
+
+
+        <div class="row" style="height: 80px">
+            <div class="col-md-4">
+                <input [(ngModel)] = "filtro"  class="form-control"  id="id_txt_filtro" name="filtro" placeholder="Ingrese el nombre" type="text" maxlength="30" />
+            </div>
+            <div class="col-md-2">
+                <button type="button" class="btn btn-primary" id="id_btn_filtrar" style="width: 150px" (click)="consulta()">Filtrar</button>
+            </div>
+            <div class="col-md-2">
+                <button  type="button" data-toggle='modal' data-target="#idModalRegistrar" class='btn btn-success' style="width: 150px">Registrar</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="content">
+
+                    <table id="id_table" class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th style="width: 5%">#</th>
+                                <th style="width: 30%">Nombre</th>
+                                <th style="width: 10%">Direccion</th>
+                                <th style="width: 10%">Estado</th>
+                                <th style="width: 31%">Pais</th>
+                                <th style="width: 7%"></th>
+                                <th style="width: 7%"></th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let aux of sedes">
+                                <td>{{ aux.idSede }}</td>
+                                <td>{{ aux.nombre }}</td>
+                                <td>{{ aux.direccion }}</td>
+                                <td>{{ aux.estado == 1 ? "Activo" : "Inactivo"}}</td>
+                                <td>{{ aux.pais!.idPais }}</td>
+                                <td>
+                                    <div class="custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" id="idEstado_{{ aux.idSede}}" [checked]="aux.estado==1?true:false" name="estado" (change)="actualizaEstado(aux)" />         
+                                        <label class="custom-control-label" for="idEstado_{{ aux.idSede }}"></label>
+                                    </div>    
+                                </td>
+                                <td><button type="button" style="width: 90px" class="btn btn-primary btn-sm"  data-toggle="modal" data-target="#idModalActualizar" (click)="buscar(aux)" >Editar</button></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="modal fade"  id="idModalRegistrar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+        <div class="modal-dialog" style="max-width: 70%;">
+            <div class="modal-content" >
+
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Registro de Sede</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                
+                <div class="modal-body">
+                    <form class="content"  (ngSubmit)="registra()"  [formGroup]="formsRegistra">
+                        <div class="submit-form">
+                            
+                                <!-- <div  class="row">
+                                    <div class="col-lg-8">
+                                        <label for="id_reg_nombre">Nombre</label>
+                                        <input  formControlName="validaNombre" [(ngModel)]="sede.nombre" type="text" placeholder="Ingrese el nombre" class="form-control" name="nombre" id="id_reg_nombre" />
+                                        <div *ngIf="submitted && formsRegistra.controls.validaNombre.errors" class="invalid"> 
+                                            <ul>
+                                                <li>El nombre es obligatorio</li>    
+                                                <li>El nombre es de 3 a 30 caracteres</li>    
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    
+                                    <div class="col-lg-4">
+                                        <label for="id_reg_direccion">DNI</label>
+                                        <input formControlName="validaDireccion" [(ngModel)]="sede.direccion" type="text" placeholder="Ingrese Direccion" class="form-control" name="direccion" id="id_reg_direccion"  maxlength="8"/>
+                                        <div *ngIf="submitted && formsRegistra.controls.validaDireccion.errors" class="invalid"> 
+                                            <ul>
+                                                <li>El Direccion es obligatorio</li>    
+                                                <li>El Direccion es de 3 a 30 caracteres</li>    
+                                            </ul>
+                                        </div> 
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-4">
+                                        <label for="id_reg_pais">Pais</label>
+                                        <select formControlName= "validaPais"  [(ngModel)]="sede.pais.idPais"  id="id_reg_pais" name="pais" class="form-control">
+                                            <option value="-1"> [Seleccione] </option>
+                                            <option *ngFor="let aux of  pais" value="{{ aux.idPais}}"> 
+                                                {{ aux.pais }}
+                                             </option>
+                                        </select>
+                                        <div *ngIf="submitted && formsRegistra.controls.validaPais.errors" class="invalid">
+                                            <ul>
+                                                <li>El Pais es obligatorio</li>    
+                                            </ul>
+                                         </div>
+                                </div> -->
+                                
+                            </div>       
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btn_reg_cerrar" style="width: 100px;">Close</button>
+                            <div class="form-group text-center">
+                                <div class="col-lg-12">
+                                    <button id="id_reg_registra"  class="btn btn-success form-control"style="width: 100px;" [disabled]="submitted && formsRegistra.invalid">Registrar</button>
+                                </div>
+                            </div>
+                        </div>
+               
+                    </form>
+                </div>
+
+
+
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="idModalActualizar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" style="max-width: 80%;">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Actualización de Sede</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                         <span aria-hidden="true">&times;</span>
+                     </button>
+                </div>
+                <div class="modal-body">
+
+                    <form class="content" (ngSubmit)="actualiza()" [formGroup]="formsActualiza">
+                        <div class="submit-form">
+
+                            <!-- <div  class="row">
+                                <div class="col-lg-8">
+                                    <label for="id_act_nombre">Nombre</label>
+                                    <input  formControlName="validaNombre" [(ngModel)]="sede.nombre"  type="text" placeholder="Ingrese el nombre" class="form-control" name="nombre" id="id_act_nombre" />
+                                    <div *ngIf="submitted && formsActualiza.controls.validaNombre.errors" class="invalid">
+                                        <ul>
+                                            <li>El nombre es obligatorio</li>    
+                                            <li>El nombre es de 3 a 30 caracteres</li>    
+                                        </ul>
+                                     </div> 
+                                </div>
+    
+                                <div class="col-lg-2">
+                                    <label  for="id_act_estado">Estado</label>
+                                    <select formControlName="validaEstado" [(ngModel)]="sede.estado"  id="id_act_estado" name="estado" class="form-control">
+                                        <option value="-1"> [Seleccione] </option>
+                                        <option value="1"> Activo </option>
+                                        <option value="0"> Inactivo </option>
+                                    </select>
+                                    <div *ngIf="submitted && formsActualiza.controls.validaEstado.errors" class="invalid">
+                                        <ul>
+                                            <li>El estado es obligatorio</li>    
+                                        </ul>
+                                     </div>
+                                </div>
+
+                                <div class="col-lg-2">
+                                    <label for="id_act_direccion">Direccion</label>
+                                    <input formControlName="validaDireccion" [(ngModel)]="sede.direccion" type="text" placeholder="Ingrese Direccion" class="form-control" name="direccion" id="id_act_direccion"  maxlength="8"/>
+                                    <div *ngIf="submitted && formsActualiza.controls.validaDireccion.errors" class="invalid">
+                                        <ul>
+                                            <li>La Direccion es obligatorio</li>    
+                                            <li>La Direccion es de 3 a 30 caracteres</li>    
+                                        </ul>
+                                     </div>
+                                </div>
+                            </div>
+        
+                             <div class="col-lg-4">
+                                 <label for="id_act_pais">Pais</label>
+                                 <select formControlName="validaPais" [(ngModel)] = "sede.pais!.idPais" id="id_act_pais" name="pais" class="form-control">
+                                      <option value="-1"> [Seleccione] </option>
+                                     <option *ngFor="let aux of pais"    value="{{ aux.idPais }}">
+                                        {{ aux.pais }}
+                                       </option> 
+                                  </select>
+                                  <div *ngIf="submitted && formsActualiza.controls.validaPais.errors" class="invalid">
+                                       <ul>
+                                          <li>El pais es obligatorio</li>    
+                                     </ul>
+                                  </div>
+                            </div>-->
+                        </div>  
+
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btn_act_cerrar">Close</button>
+                            <div class="form-group text-center">
+                                <div class="col-lg-12">
+                                    <button id="id_act_actualiza" class="btn btn-success form-control"[disabled]="submitted && formsActualiza.invalid">Actualizar</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+
+
+                </div>
+
+            </div>
+        </div>
+    </div>
