--- a/src/app/components/registra-cliente/registra-cliente.component.html
+++ b/src/app/components/registra-cliente/registra-cliente.component.html
@@ -1,1 +1,99 @@
-<p>registra-cliente works!</p>
+<section class="vh-100 gradient-custom">
+    <div>
+        <form class="content" (ngSubmit)="insertado()">
+        <div class="submit-form" >
+      
+             <div class="row">
+                <div class="col-lg-12">
+                    <h6>Registro de Cliente </h6>
+                </div>
+            </div>
+    
+    <div class="row" style="margin-top: 3%">
+            <div class="col-lg-6">
+                    <label for="nombres">Nombres</label>
+                    <input type="text" class="form-control" name="nombres" id="nombres" [(ngModel)] ="cliente.nombres"/>
+            </div>
+        </div>
+    
+    
+             <div class="row" style="margin-top: 3%">
+                <div class="col-lg-6">
+                    <label for="apellidos">Apellidos</label>
+                    <input type="text" class="form-control" name="apellidos" id="apellidos" [(ngModel)] ="cliente.apellidos"/>
+                </div>
+            
+                <div class="form-group col-md-6">
+                    <label for="fechaNacimiento">Fecha Nacimiento</label>
+                    <input class="form-control" type="date" id="fechaNacimiento" name="fechaNacimiento" [(ngModel)] ="cliente.fechaNacimiento"/>        
+                </div>
+         </div>
+    
+         <div class="row" style="margin-top: 3%">
+            <div class="col-lg-6">
+                <label for="dni">DNI</label>
+                <input type="text" class="form-control" name="dni" id="dni" maxlength="8" [(ngModel)] ="cliente.dni"/>
+            </div>
+        
+            <div class="col-lg-6">
+                <label for="correo">Correo</label>
+                <input type="text" class="form-control" name="correo" id="correo" [(ngModel)] ="cliente.correo"/>
+            </div>
+        </div>
+    
+        <div class="row" style="margin-top: 3%">
+    
+            <div class="col-lg-6">
+                <label for="direccion">Direccion</label>
+                <input type="text" class="form-control" name="direccion" id="direccion" [(ngModel)] ="cliente.direccion"/>
+            </div>
+    
+        </div>
+    
+    
+            <div class="row" style="margin-top: 3%">
+    
+                <div class="col-lg-4">
+                    <label for="departamento">Departamento</label>
+                    <select  id="departamento" name="departamento" class="form-control" (change)="cargaProvincia()" [(ngModel)] ="cliente.ubigeo!.departamento"> 
+                        <option value="-1"> [Seleccione] </option>   
+                       <option *ngFor="let aux of departamentos" value="{{aux}}">
+                           {{aux}}
+                       </option>
+                    </select>
+                </div>
+    
+                <div class="col-lg-4">
+                    <label for="provincia">Provincia</label>
+                    <select  id="provincia" name="provincia" class="form-control" (change)="cargaDistrito()" [(ngModel)] ="cliente.ubigeo!.provincia">
+                        <option value="-1"> [Seleccione] </option>   
+                        <option *ngFor="let aux of provincias" value="{{aux}}">
+                            {{aux}}
+                        </option>
+                    </select>
+                </div>
+    
+                <div class="col-lg-4">
+                    <label for="distrito">Distrito</label>
+                    <select  id="distrito" name="distrito" class="form-control" [(ngModel)] ="cliente.ubigeo!.idUbigeo">
+                        <option value="-1"> [Seleccione] </option>   
+                        <option *ngFor="let aux of distritos" value="{{aux.idUbigeo}}">
+                            {{aux.distrito}}
+                        </option>
+                    </select>
+                </div>
+    
+            </div>
+      
+            <div class="row" style="margin-top: 3%"> 
+                    <div class="col-lg-12">
+                        <button class="btn btn-success"  >Enviar</button>
+                    </div>
+            </div>
+          </div>
+      
+         </form>
+        </div>
+    
+    </section>
+    
